# dcm-dump

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/dicom/: meta.rs  mod.rs  preamble.rs
tests/: basic.rs
