[package]
name = "dcm-dump"
version = "0.1.1"
edition = "2021"
description = "A minimal Rust crate + CLI to dump DICOM tags byte-by-byte"
license = "MIT OR Apache-2.0"
repository = "https://github.com/angsot3/dcm-dump"
readme = "README.md"
keywords = ["dicom", "dump", "raw", "medical"]
categories = ["command-line-utilities", "science"]


[dependencies]
